modify the explore page

--- a/index.html
+++ b/index.html
@@ -66,73 +66,73 @@
 
             <div class="px-32 py-4 flex flex-wrap gap-8 justify-center">
 
-                <div class="h-16">
+                <div class="h-16 md:basis-1/5">
                     <img src="./images/aot-cover.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;" >
                         <p class="bg-white text-xl text-blue-700 p-2">Attack on Titan</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/jjk-cover.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;">
                         <p class="bg-white text-xl text-blue-700 p-2">Jujutsu Kaisen</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/blackclover-cover.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;">
                         <p class="bg-white text-xl text-blue-700 p-2">Black Clover</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/berserk.jpg" class="object-cover w-[288px] h-[380px]"alt="...">
                     <div class="card-body" style="height: 30px;"">
                         <p class="bg-white text-xl text-blue-700 p-2">Berserk</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/bleach.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;"">
                         <p class="bg-white text-xl text-blue-700 p-2">Bleach</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/bluelock.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;">
                         <p class="bg-white text-xl text-blue-700 p-2">Blue Lock</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/haikyui.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;">
                         <p class="bg-white text-xl text-blue-700 p-2">Haikyui</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/ippo.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;">
                         <p class="bg-white text-xl text-blue-700 p-2">Hajimeno Ippo</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/mob.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;">
                         <p class="bg-white text-xl text-blue-700 p-2">Mob Psycho 100</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/naruto-cover.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;"">
                         <p class="bg-white text-xl text-blue-700 p-2">Naruto</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/onepeice-cover.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;"">
                         <p class="bg-white text-xl text-blue-700 p-2">One Piece</p>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card md:basis-1/5" style="width: 18rem;">
                     <img src="./images/vinlandsaga.jpg" class="object-cover w-[288px] h-[380px]" alt="...">
                     <div class="card-body" style="height: 30px;"">
                         <p class="bg-white text-xl text-blue-700 p-2">Vinland Saga</p>
